--- a/templates/default/web_app.conf.erb
+++ b/templates/default/web_app.conf.erb
@@ -1,6 +1,11 @@
-<VirtualHost *:80>
+<% if node['apache']['version'] != '2.4' -%>
+NameVirtualHost *:<%= @params[:server_port] %>
+<% end -%>
+<VirtualHost *:<%= @params[:server_port] %>>
   ServerName <%= @params[:server_name] %>
-  ServerAlias <%= @params[:server_aliases].join(' ')%>
+  <% if @params[:server_aliases] -%>
+  ServerAlias <%= @params[:server_aliases].join " " %>
+  <% end -%>
   DocumentRoot <%= @params[:docroot] %>
   RewriteEngine On
   
