[BUGFIX] Use https for Zabbix Server #patch
Fixes: https://forge.typo3.org/issues/82215

--- a/templates/default/config.inc.php.erb
+++ b/templates/default/config.inc.php.erb
@@ -1,4 +1,4 @@
 <?php
-$apiUrl = 'http://<%= node.zabbix.web.fqdn %>/api_jsonrpc.php';
+$apiUrl = 'https://<%= node.zabbix.web.fqdn %>/api_jsonrpc.php';
 $apiUser = '<%= node['site-statustypo3org']['api']['username'] %>';
 $apiPass = '<%= node['site-statustypo3org']['api']['password'] %>';
